# gemfarm

./: .gitignore  README.md  main.py  package.json  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatView.vue  ConnectionStatus.vue  GameView.vue
frontend/src/stores/: socket.js
gemfarm/: __init__.py  utils.py
gemfarm/chat/: __init__.py  ai.py  events.py
gemfarm/config/: __init__.py  base.py  development.py  production.py
gemfarm/game/: __init__.py  routes.py
gemfarm/static/css/: custom.css
gemfarm/static/js/: game.js  input.js  intel.js  socket.js
gemfarm/templates/: index.html
