[project]
name = "gemfarm"
version = "0.1.0"
description = "gemfarm is a networked multiplayer game where the player controls the autonomous character to farm resources."
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask_socketio"
    "tarsafe",
    "google-generativeai",
    ""
]
